# LMInfra101n

./: .gitignore  lminfra101n_train.ipynb  main.py  pyproject.toml
configs/: config.dev.yaml
data/: dataset.jsonl
lminfra101n/: configs.py  main.py  models.py  serve.py  train.py
src/lminfra101n/: configs.py  loggers.py  main.py  models.py  serve.py  train.py
tests/: test_repo.py  test_train.py
